changing README file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "front-end-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://phamiter253.github.io",
+  "homepage": "https://phamiter253.github.io/front-end-test",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
