--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "save-dev": "^0.0.1-security",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
