--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
+    "gsap": "^3.10.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
